[S05P21C103-122] [FE-rladmswlek] feat: 베스트 멤버 UI 구현

--- a/frontend/src/components/Main/css/Home.css
+++ b/frontend/src/components/Main/css/Home.css
@@ -86,11 +86,15 @@
 }
 
 .main-left {
-  width: 70%;
+  width: 65%;
+}
+
+.main-right {
+  width: 35%;
 }
 
 .best-member {
-  height: 45%;
+  height: 50%;
 }
 
 /* 반응형 */
@@ -167,5 +171,11 @@
   
   .search-input {
     width: 70vw;
+  }
+
+  .main-right {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
   }
 }
