--- a/frontend/src/components/EduPro/EduPro.css
+++ b/frontend/src/components/EduPro/EduPro.css
@@ -1,15 +1,20 @@
 .pro-head {
+    /* display: flex;
+    height: 10vh; */
+    height: 20%;
+    width: 100vw;
     display: flex;
-    width: 45vw;
-    height: 10vh;
+    align-items: center;
+    justify-content: space-around;
 }
 
 .pro-head-left {
-    display: flex;
+    /* display: flex;
     justify-content: center;
     align-items: center;
     width: 80%;
-    height: 120%;
+    height: 120%; */
+    margin: 2rem 0;
 }
 
 .pro-head-right {
@@ -21,8 +26,7 @@
 }
 
 .pro-logo {
-    /* height: ; */
-    width: 100%;
+    margin: 2rem 0;
 
 }
 .pro-body-head {
