[S05P21C103-106] [FE-rladmswlek] feat: 게시글 콘텐츠 구현

--- a/frontend/src/components/Main/css/Home.css
+++ b/frontend/src/components/Main/css/Home.css
@@ -82,11 +82,16 @@
 
 .main-body {
   display: flex;
-  height: 70vh;
+  height: 80vh;
 }
 
 .main-left {
   width: 65%;
+  height: 100%;
+}
+
+.find-contents {
+  height: 100%;
 }
 
 .main-right {
