--- a/frontend/src/components/Main/css/Contents.css
+++ b/frontend/src/components/Main/css/Contents.css
@@ -1,8 +1,9 @@
 .c-container {
-  margin: 0 5rem 5rem 2rem;
+  margin: 0 5rem 0 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100%;
 }
 
 .c-header {
@@ -20,14 +21,27 @@
   color: #D0DFF2;
 }
 
-.c-all {
-  border: none;
-  background-color: #fff;
+.c-title-right {
   display: flex;
   align-items: flex-end;
 }
 
-.c-all h6 {
+.c-title-cal,
+.c-title-btn {
+  border: none;
+  background-color: #fff;
+  display: flex;
+  align-items: flex-end;
+  margin: 0 0.5rem;
+}
+
+.c-title-cal {
+  display: flex;
+  align-items: center;
+  z-index: 3;
+}
+
+.c-title-btn h6 {
   font-weight: bold;
   margin: 0;
   display: flex;
@@ -45,6 +59,7 @@
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  position: relative;
 }
 
 .c-slider {
@@ -97,15 +112,31 @@
   cursor: pointer;
 }
 
+.nav-down {
+  background-color: #0E4289;
+  display: flex;
+  justify-content: center;
+  z-index: 1;
+  position: absolute;
+  width: 100%;
+}
+
 .nav-none {
   display: none;
+}
+
+.c-body {
+  height: 50vh;
+  position: relative;
+  width: 100%;
 }
 
 .sub-nav {
   background-color: #145DBF;
   width: 100%;
   height: 10rem;
-  position: relative;
+  position: absolute;
+  z-index: 1;
 }
 
 .nav-up {
@@ -113,6 +144,14 @@
   bottom: 0.1rem;
   left: 50%;
   transform: translateX(-50%);
+}
+
+.sub-nav-bottom {
+  background-color: #fff;
+  height: 0.3rem;
+  width: 100%;
+  position: absolute;
+  bottom: -0.3rem;
 }
 
 .c-channels {
@@ -123,8 +162,87 @@
   margin: 1rem 2rem 1rem 2rem;
 }
 
+.c-channels::-webkit-scrollbar {
+  width: auto;
+  background-color: rgb(161, 190, 229);
+  border-radius: 9px;
+}
+
+.c-channels::-webkit-scrollbar-thumb {
+  background-color: rgb(14, 66, 137);
+  border-radius: 9px;  
+}
+
 .c-channel {
   margin: 0.5rem 2rem;
   font-weight: bold;
   color: lightgray;
+}
+
+.c-channel:hover {
+  font-weight: bold;
+  color: #000;
+  cursor: pointer;
+}
+
+.c-contents {
+  margin: 2.5rem 0 0 2rem;
+  overflow-y: auto;
+  height: 100%;
+}
+
+.c-contents::-webkit-scrollbar {
+  width: auto;
+  border-radius: 9px;
+}
+
+.c-contents::-webkit-scrollbar-thumb {
+  background-color: lightgray;
+  border-radius: 9px;  
+}
+
+.cc-container {
+  margin-right: 2rem;
+}
+
+.contents-header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.ch-profile {
+  display: flex;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+
+.ch-image {
+  background-color: darkgray;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 1rem;
+}
+
+h5, 
+h6 {
+  margin: 0;
+}
+
+.no-show {
+  display: none;
+}
+
+.ch-keep {
+  color: tomato;
+}
+
+.ch-no-keep:hover,
+.ch-keep:hover {
+  cursor: pointer;
+  color: tomato;
+}
+
+.ch-keep:hover {
+  color: gray;
 }
