[S05P21C103-117][FE-sjd0051] feat:프로페이지 전체 완료

--- a/frontend/src/components/EduPro/css/EduPro.css
+++ b/frontend/src/components/EduPro/css/EduPro.css
@@ -1,3 +1,7 @@
+.pro-container {
+    height: 100vh;
+}
+
 .pro-head {
     /* display: flex;
     height: 10vh; */
@@ -33,6 +37,7 @@
     display: flex;
     width: 80vw;
     height: 10vh;
+    margin-left: 100px;
 }
 
 .pro-body-body {
