[S05P21C103-106] [FE-rladmswlek] feat: 게시글 콘텐츠 반응형 구현

--- a/frontend/src/components/Main/css/Home.css
+++ b/frontend/src/components/Main/css/Home.css
@@ -151,7 +151,7 @@
   }
 
   .main-search {
-    margin-bottom: 3rem;
+    margin-bottom: 0.5rem;
   }
 
   .link {
@@ -182,5 +182,10 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+  }
+
+  .main-left {
+    width: 100%;
+    margin-bottom: 1rem;
   }
 }
