--- a/frontend/src/components/Main/css/Contents.css
+++ b/frontend/src/components/Main/css/Contents.css
@@ -246,3 +246,41 @@ h6 {
 .ch-keep:hover {
   color: gray;
 }
+
+@media (max-width: 992px) {
+  .c-container {
+    margin: 1rem 5%;
+  }
+
+  .c-title-btn {
+    display: none;
+  }
+
+  .c-title-cal input {
+    width: 100%;
+    font-size: 0.75rem;
+  }
+
+  .group-title {
+    font-size: 0.7rem;
+    padding: 0;
+  }
+
+  .c-contents {
+    font-size: small;
+    margin: 1rem 0 1rem 1rem;
+    height: 35vh;
+  }
+
+  .c-body {
+    height: 40vh;
+  }
+
+  .c-contents h5 {
+    font-size: 0.8rem;
+  }
+
+  .c-contents h6 {
+    font-size: 0.8rem;
+  }
+}
