--- a/frontend/src/components/Main/css/BestMember.css
+++ b/frontend/src/components/Main/css/BestMember.css
@@ -20,7 +20,7 @@
 }
 
 .bm-slider {
-  width: 90%;
+  width: 95%;
 }
 
 .bm-body {
@@ -45,7 +45,7 @@
 .bm-content {
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
   margin: 0.5rem 0;
 }
 
@@ -86,6 +86,6 @@
 /* 반응형 */
 @media (max-width: 992px) {
   .bm-container {
-    margin: 1rem 2rem 3rem 2rem;
+    margin: 1rem 5%;
   }
 }
