[S05P21C103-124] [FE-rladmswlek] feat: 싸피셜 UI 구현

--- a/frontend/src/components/Main/css/Home.css
+++ b/frontend/src/components/Main/css/Home.css
@@ -181,7 +181,7 @@
   .main-right {
     width: 100%;
     display: flex;
-    flex-direction: column;
+    justify-content: space-evenly;
   }
 
   .main-left {
