--- a/frontend/src/components/Main/css/BestMember.css
+++ b/frontend/src/components/Main/css/BestMember.css
@@ -1,5 +1,5 @@
 .bm-container {
-  margin: 0 5rem 5rem 2rem;
+  margin: 0 5rem 5rem 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -86,6 +86,15 @@
 /* 반응형 */
 @media (max-width: 992px) {
   .bm-container {
-    margin: 1rem 5%;
+    margin: 1rem 0;
+    width: 47.5vw;
+  }
+
+  .bm-header {
+    width: 90%;
+  }
+
+  .bm-slider {
+    width: 85%;
   }
 }
