[S05P21C103-117] [FE-rladmswlek] feat: 프로페이지 반응형 구현

--- a/frontend/src/components/Login/Login.css
+++ b/frontend/src/components/Login/Login.css
@@ -144,3 +144,12 @@
     font-size: 3.5rem;
   }
 }
+
+/* 다크모드 */
+.dark-left-bg {
+  background-color: #332940;
+}
+
+.dark-right-bg {
+  background-color: #808080;
+}
