--- a/frontend/src/components/EduPro/css/EduPro.css
+++ b/frontend/src/components/EduPro/css/EduPro.css
@@ -62,10 +62,12 @@
 
 .pro-body-body {
     height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 .main-btns {
     justify-content: right;
   }
@@ -92,8 +94,9 @@
 }
 
 .pro-body-bodylist {
-    padding: 0 120px;
-    height: 60vh;
+    /* padding: 0 120px; */
+    height: 50vh;
+    width: 90%;
     overflow-y: auto;
 }
 
@@ -106,5 +109,22 @@
 .pro-body-bodylist::-webkit-scrollbar-thumb {
     background-color: rgb(14, 66, 137);
     border-radius: 9px;
-    
+}
+
+.ep-header-responsive {
+    display: none;
+}
+
+/* 반응형 */
+@media (max-width: 992px) {
+    .pro-head {
+        display: none;
+    }
+
+    .ep-header-responsive {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 2rem 0;
+    }
 }
