--- a/frontend/src/components/Main/css/Scrap.css
+++ b/frontend/src/components/Main/css/Scrap.css
@@ -101,6 +101,11 @@
   .best-member {
     height: 50%;
   }
+
+  .MyScrap-container {
+    align-items: center;
+    /* display: flex; */
+  }
   
   /* 반응형 */
   @media (max-width: 992px) {
