--- a/frontend/src/components/Main/css/Myscrap.css
+++ b/frontend/src/components/Main/css/Myscrap.css
@@ -1,4 +1,4 @@
-.c-container {
+.scrap-c-container {
   margin: 0 5rem 0 2rem;
   display: flex;
   flex-direction: column;
@@ -6,28 +6,28 @@
   height: 100%;
 }
 
-.c-header {
+.scrap-c-header {
   width: 100%;
 }
 
-.c-title {
+.scrap-c-title {
   display: flex;
   justify-content: space-between;
 }
 
-.c-title h2 {
+.scrap-c-title h2 {
   font-weight: bold;
   margin: 0;
   color: #D0DFF2;
 }
 
-.c-title-right {
+.scrap-c-title-right {
   display: flex;
   align-items: flex-end;
 }
 
-.c-title-cal,
-.c-title-btn {
+.scrap-c-title-cal,
+.scrap-c-title-btn {
   border: none;
   background-color: #fff;
   display: flex;
@@ -35,24 +35,24 @@
   margin: 0 0.5rem;
 }
 
-.c-title-cal {
+.scrap-c-title-cal {
   display: flex;
   align-items: center;
   z-index: 3;
 }
 
-.c-title-btn h6 {
+.scrap-c-title-btn h6 {
   font-weight: bold;
   margin: 0;
   display: flex;
   align-items: flex-end;
 }
 
-.c-header hr {
+.scrap-c-header hr {
   margin: 0.5rem 0;
 }
 
-.c-nav {
+.scrap-c-nav {
   width: 100%;
   background-color: #0E4289;
   display: flex;
@@ -62,16 +62,16 @@
   position: relative;
 }
 
-.c-slider {
+.scrap-c-slider {
   width: 90%;
   margin: 0.5rem 0;
 }
 
-.c-group {
+.scrap-c-group {
   width: 100%;
 }
 
-.group-title {
+.scrap-group-title {
   width: 80%;
   border-radius: 5px;
   border: 2px solid #A1BEE5;
@@ -86,33 +86,33 @@
   overflow-y: hidden;
 }
 
-.group-title:hover {
+.scrap-group-title:hover {
   background-color: #fff;
   cursor: pointer;
   color: #0E4289;
   opacity: 0.9;
 }
 
-.group-chk {
+.scrap-group-chk {
   background-color: #fff;
   color: #0E4289;
   opacity: 0.9;
 }
 
-.nav-down,
-.nav-up {
+.scrap-nav-down,
+.scrap-nav-up {
   color: #f2f2f2;
   font-size: larger;
   margin-bottom: 0.2rem;
 }
 
-.nav-down:hover,
-.nav-up:hover {
+.scrap-nav-down:hover,
+.scrap-nav-up:hover {
   color: #579EFF;
   cursor: pointer;
 }
 
-.nav-down {
+.scrap-nav-down {
   background-color: #0E4289;
   display: flex;
   justify-content: center;
@@ -121,11 +121,11 @@
   width: 100%;
 }
 
-.nav-none {
+.scrap-nav-none {
   display: none;
 }
 
-.c-body {
+.scrap-c-body {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -134,7 +134,7 @@
   width: 100%;
 }
 
-.sub-nav {
+.scrap-sub-nav {
   background-color: #145DBF;
   width: 100%;
   height: 10rem;
@@ -142,14 +142,14 @@
   z-index: 1;
 }
 
-.nav-up {
+.scrap-nav-up {
   position: absolute;
   bottom: 0.1rem;
   left: 50%;
   transform: translateX(-50%);
 }
 
-.sub-nav-bottom {
+.scrap-sub-nav-bottom {
   background-color: #fff;
   height: 0.3rem;
   width: 100%;
@@ -157,7 +157,7 @@
   bottom: -0.3rem;
 }
 
-.c-channels {
+.scrap-c-channels {
   display: flex;
   flex-wrap: wrap;
   overflow-y: auto;
@@ -165,48 +165,48 @@
   margin: 1rem 2rem 1rem 2rem;
 }
 
-.c-channels::-webkit-scrollbar {
+.scrap-c-channels::-webkit-scrollbar {
   width: auto;
   background-color: rgb(161, 190, 229);
   border-radius: 9px;
 }
 
-.c-channels::-webkit-scrollbar-thumb {
+.scrap-c-channels::-webkit-scrollbar-thumb {
   background-color: rgb(14, 66, 137);
   border-radius: 9px;  
 }
 
-.c-channel {
+.scrap-c-channel {
   margin: 0.5rem 2rem;
   font-weight: bold;
   color: lightgray;
 }
 
-.c-channel:hover {
+.scrap-c-channel:hover {
   font-weight: bold;
   color: #000;
   cursor: pointer;
 }
 
-.c-contents {
+.scrap-c-contents {
   margin: 2.5rem 0 0 2rem;
   overflow-y: auto;
   height: 100%;
   width: 80%;
 }
 
-.c-contents::-webkit-scrollbar {
+.scrap-c-contents::-webkit-scrollbar {
   width: auto;
   border-radius: 9px;
   background-color: rgb(161, 190, 229);
 }
 
-.c-contents::-webkit-scrollbar-thumb {
+.scrap-c-contents::-webkit-scrollbar-thumb {
   background-color: rgb(14, 66, 137);
   border-radius: 9px;  
 }
 
-.cc-container {
+.scrap-cc-container {
   display: flex;
   margin-top: 1rem;
   margin-right: 2rem;
@@ -215,26 +215,26 @@
   width: 80%;
 }
 
-.ccc-container {
+.scrap-ccc-container {
   width: 100%;
   margin: 1rem;
 
 }
 
-.contents-header {
+.scrap-contents-header {
   margin-top: 1rem;
   display: flex;
   justify-content: space-between;
 }
 
-.ch-profile {
+.scrap-ch-profile {
   display: flex;
   align-items: center;
   margin-bottom: 1rem;
   margin-left: 1rem;
 }
 
-.ch-image {
+.scrap-ch-image {
   background-color: darkgray;
   width: 70px;
   height: 70px;
@@ -247,80 +247,80 @@ h6 {
   margin: 0;
 }
 
-.contents-header-date {
+.scrap-contents-header-date {
   display: flex;
   /* margin-top: 0.3rem; */
 }
 
-.no-show {
+.scrap-no-show {
   display: none;
 }
 
-.ch-keep {
+.scrap-ch-keep {
   color: tomato;
 }
 
-.ch-no-keep:hover,
-.ch-keep:hover {
+.scrap-ch-no-keep:hover,
+.scrap-ch-keep:hover {
   cursor: pointer;
   color: tomato;
 }
 
-.ch-keep:hover {
+.scrap-ch-keep:hover {
   color: gray;
 }
 
-.c-hr {
+.scrap-c-hr {
   margin: 0 1.8rem;
 }
 
-.cc-body-content {
+.scrap-cc-body-content {
   margin: 0 4rem;
 }
 
 
 @media (max-width: 992px) {
-  .c-container {
+  .scrap-c-container {
     margin: 1rem 5%;
   }
 
-  .c-title-btn {
+  .scrap-c-title-btn {
     display: none;
   }
 
-  .c-title-cal input {
+  .scrap-c-title-cal input {
     width: 100%;
     font-size: 0.75rem;
   }
 
-  .ch-image {
+  .scrap-ch-image {
     display: none;
   }
 
-  .group-title {
+  .scrap-group-title {
     font-size: 0.7rem;
     padding: 0;
   }
 
-  .contents-header-date h3,h4 {
+  .scrap-contents-header-date h3,h4 {
     font-size: small;
   }
 
-  .c-contents {
+  .scrap-c-contents {
     font-size: small;
     margin: 1rem 0 1rem 1rem;
     height: 35vh;
   }
 
-  .c-body {
+  .scrap-c-body {
     height: 40vh;
   }
 
-  .c-contents h5 {
+  .scrap-c-contents h5 {
     font-size: 0.8rem;
   }
 
-  .c-contents h6 {
+  .scrap-c-contents h6 {
     font-size: 0.8rem;
   }
 
