--- a/frontend/src/components/DarkMode/DarkMode.css
+++ b/frontend/src/components/DarkMode/DarkMode.css
@@ -22,8 +22,10 @@
 }
 
 @media (max-width: 992px) {
-  .darkmode-container {
-    top: 2rem;
+  .darkmode-container {    
     left: 2rem;
+    top: 2rem;
+    width: 2rem;
+    height: 2rem;
   }
 }
