--- a/frontend/src/components/EduPro/css/EduPro.css
+++ b/frontend/src/components/EduPro/css/EduPro.css
@@ -32,10 +32,6 @@
     align-items: center;
 }
 
-.pro-head-right h1 {
-    
-}
-
 /* 프로 사용자 프로필  */
 .pro-head-profileall {
     display: flex;
@@ -115,6 +111,14 @@
     display: none;
 }
 
+
+/* 다크모드 */
+.dark-pro-container {
+    background-color: #242424;
+    color: #bbb;
+}
+
+
 /* 반응형 */
 @media (max-width: 992px) {
     .pro-head {
@@ -125,6 +129,6 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin: 2rem 0;
+        padding: 2rem 0;
     }
 }
