--- a/frontend/src/components/Main/css/Contents.css
+++ b/frontend/src/components/Main/css/Contents.css
@@ -1,5 +1,4 @@
 .c-container {
-  margin: 0 5rem 0 2rem;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -54,12 +53,15 @@
 
 .c-nav {
   width: 100%;
-  background-color: #0E4289;
+  /* background-color: #0E4289; */
+  background-color: transparent;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
   position: relative;
+  border: 1px solid #A1BEE5;
+  border-radius: 1px;
 }
 
 .c-slider {
@@ -74,8 +76,8 @@
 .group-title {
   width: 80%;
   border-radius: 5px;
-  border: 2px solid #A1BEE5;
-  color: #A1BEE5;
+  border: 2px solid #0E4289;
+  color: #0E4289;
   font-weight: bold;
   display: flex;
   justify-content: center;
@@ -87,21 +89,22 @@
 }
 
 .group-title:hover {
-  background-color: #fff;
   cursor: pointer;
-  color: #0E4289;
+  color: #A1BEE5;
+  border: 2px solid #A1BEE5;
   opacity: 0.9;
 }
 
 .group-chk {
-  background-color: #fff;
-  color: #0E4289;
+  background-color: #0E4289;
+  color: #A1BEE5;
+  border: 2px solid #A1BEE5;
   opacity: 0.9;
 }
 
 .nav-down,
 .nav-up {
-  color: #f2f2f2;
+  color: #0E4289;
   font-size: larger;
   margin-bottom: 0.2rem;
 }
@@ -113,7 +116,6 @@
 }
 
 .nav-down {
-  background-color: #0E4289;
   display: flex;
   justify-content: center;
   z-index: 1;
@@ -132,7 +134,7 @@
 }
 
 .sub-nav {
-  background-color: #145DBF;
+  background-color: #A1BEE5;
   width: 100%;
   height: 10rem;
   position: absolute;
@@ -176,7 +178,7 @@
 .c-channel {
   margin: 0.5rem 2rem;
   font-weight: bold;
-  color: lightgray;
+  color: rgb(95, 95, 95);
 }
 
 .c-channel:hover {
