--- a/frontend/src/components/Main/css/Ssafycial.css
+++ b/frontend/src/components/Main/css/Ssafycial.css
@@ -1,5 +1,4 @@
 .s-container {
-  margin: 0 5rem 5rem 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -62,5 +61,9 @@
 
   .s-header {
     width: 90%;
+  }
+
+  .a-title p {
+    font-size: 0.9rem;
   }
 }
