--- a/frontend/src/components/Main/css/Home.css
+++ b/frontend/src/components/Main/css/Home.css
@@ -2,39 +2,37 @@
   height: 100vh;
 }
 
-.main-header {
-  height: 20%;
-  width: 100vw;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-
 .main-header-responsive {
   display: none;
 }
 
-.main-search {
+.main-container {
   display: flex;
-  background-color: #0E4289;
-  border-radius: 5px;
-  width: 31rem;
+  justify-content: space-evenly;
 }
 
-.search-input {
-  margin: 0.4rem;
-  width: 27rem;
-  height: 3rem;
-  border-radius: 5px;
+.main-left {
+  width: 55%;
+  height: 100%;
 }
 
-.search-btn {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  background-color: #0E4289;  
-  border: 0;
-  margin-right: 0.4rem;
+.find-contents {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
+.main-right {
+  width: 35%;
+  height: 100%;
+  overflow-y: hidden;
+}
+
+.right-header {
+  height: 20vh;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .main-profile {
@@ -80,32 +78,8 @@
   margin: 0.2rem ;
 }
 
-.main-body {
-  display: flex;
-  height: 80vh;
-  width: 100vw;
-  justify-content: space-around;
-}
-
-.main-left {
-  width: 55%;
-  height: 100%;
-}
-
-.find-contents {
-  width: 100%;
-  height: 100%;
-  margin: 0;
-}
-
-.main-right {
-  width: 35%;
-  height: 100%;
-  overflow-y: hidden;
-}
-
 .best-member {
-  height: 50%;
+  height: 17.5rem;
   border: 2px solid #b6b6b6;
   border-radius: 7px;
   padding: 0.4rem 2rem;
@@ -154,7 +128,7 @@
 
   .dark-c-channels > .c-channel:hover {
     color: #A1BEE5;
-    }
+  }
 
 
 /* 반응형 */
@@ -165,12 +139,9 @@
     align-items: center;
   }
 
-  .main-header {
-    display: none;
-  }
-
-  .main-logo {
-    margin: 2rem 0;
+  .main-container {
+    display: flex;
+    flex-direction: column;
   }
 
   .hamburger {
@@ -225,26 +196,24 @@
     justify-content: space-around;
   }
 
-  .main-search {
-    width: 85vw;
-    display: flex;
-    justify-content: space-evenly;
-  }
-  
-  .search-input {
-    width: 70vw;
+  .main-left {
+    width: 100%;
+    margin-bottom: 1rem;
   }
 
   .main-right {
     width: 100%;
     display: flex;
     justify-content: space-evenly;
-    margin-bottom: 1rem;
+    overflow-y: visible;
   }
 
-  .main-left {
-    width: 100%;
-    margin-bottom: 1rem;
+  .right-header {
+    display: none;
+  }
+
+  .best-member {
+    height: 18rem;
   }
 
   .ssafycial,
