[S0521C103-134][FE-sjd0051] feat:프로&즐겨찾기 수정 폴더화

--- a/frontend/src/components/DarkMode/DarkMode.css
+++ b/frontend/src/components/DarkMode/DarkMode.css
@@ -21,6 +21,30 @@
   cursor: pointer;
 }
 
+/* 프로(에듀프로) */
+.dark-pro-container {
+  background-color: #242424;
+  color: rgb(161, 190, 229);
+}
+
+/* 스크랩(즐겨찾기) */
+.dark-scrap-main {
+  background-color: #242424;
+  color: rgb(161, 190, 229);
+}
+
+.dark-search-input {
+  background-color: #242424;
+  color: #bbb;
+}
+
+.dark-MyScrap-container {
+  background-color: #242424;
+  color: rgb(161, 190, 229);
+}
+
+/* 스크랩(즐겨찾기) 마이 스크랩*/
+
 @media (max-width: 992px) {
   .darkmode-container {    
     left: 2rem;
