[S05P21C103-105] [FE-rladmswlek] feat: 팀 / 채널 필터링 & 메인 페이지 수정

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -36,3 +36,16 @@
     transform: rotate(360deg);
   }
 }
+
+/* 폰트 */
+@font-face {
+  font-family: 'HSYuji-Regular';
+  src: url('/src/font/HSyuji.ttf');
+}
+
+@font-face {
+  font-family: 'IM_Hyemin-Bold';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2106@1.1/IM_Hyemin-Bold.woff2') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
