--- a/frontend/src/components/EduPro/css/ProBestMember.css
+++ b/frontend/src/components/EduPro/css/ProBestMember.css
@@ -17,7 +17,7 @@
     align-items: center;
 
     border: 2px solid;
-    border-color: rgb(14, 66, 137);
+    border-color: #A1BEE5;
     border-radius: 5px;
     margin-bottom: 20px;
 }
