[S05P21C103-134,S05P21C103-137][FE-sjd0051] feat: 프로&스크랩 로그아웃, 반응형 수정

--- a/frontend/src/components/Scrap/css/Scrap.css
+++ b/frontend/src/components/Scrap/css/Scrap.css
@@ -49,6 +49,9 @@
   width: 70px;
   height: 70px;
   border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .scrap-mp-info {
