--- a/frontend/src/components/Main/css/Contents.css
+++ b/frontend/src/components/Main/css/Contents.css
@@ -263,6 +263,15 @@
   height: 40px;
   border-radius: 50%;
   margin-right: 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.ch-profile-img {
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
 }
 
 h5, 
