--- a/frontend/src/components/Scrap/css/Myscrap.css
+++ b/frontend/src/components/Scrap/css/Myscrap.css
@@ -284,8 +284,15 @@ h6 {
   padding: 1rem 2rem;
   font-size: large;
 }
-.scrap-contents-header-date h3,h4 {
+.scrap-contents-header-date h3,
+.scrap-contents-header-date h4 {
   font-size: 1.3rem;
+}
+
+.scrap-contents-header-date {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 
